cmake_minimum_required(VERSION 3.5)
project(redis)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    redis-src/adlist.c
    redis-src/adlist.h
    redis-src/ae.c
    redis-src/ae.h
    redis-src/ae_epoll.c
    redis-src/ae_evport.c
    redis-src/ae_kqueue.c
    redis-src/ae_select.c
    redis-src/anet.c
    redis-src/anet.h
    redis-src/aof.c
    redis-src/asciilogo.h
    redis-src/bio.c
    redis-src/bio.h
    redis-src/bitops.c
    redis-src/blocked.c
    redis-src/cluster.c
    redis-src/cluster.h
    redis-src/config.c
    redis-src/config.h
    redis-src/crc16.c
    redis-src/crc64.c
    redis-src/crc64.h
    redis-src/db.c
    redis-src/debug.c
    redis-src/dict.c
    redis-src/dict.h
    redis-src/endianconv.c
    redis-src/endianconv.h
    redis-src/fmacros.h
    redis-src/geo.c
    redis-src/geo.h
    redis-src/help.h
    redis-src/hyperloglog.c
    redis-src/intset.c
    redis-src/intset.h
    redis-src/latency.c
    redis-src/latency.h
    redis-src/lzf.h
    redis-src/lzf_c.c
    redis-src/lzf_d.c
    redis-src/lzfP.h
    redis-src/memtest.c
    redis-src/multi.c
    redis-src/networking.c
    redis-src/notify.c
    redis-src/object.c
    redis-src/pqsort.c
    redis-src/pqsort.h
    redis-src/pubsub.c
    redis-src/quicklist.c
    redis-src/quicklist.h
    redis-src/rand.c
    redis-src/rand.h
    redis-src/rdb.c
    redis-src/rdb.h
    redis-src/redis-benchmark.c
    redis-src/redis-check-aof.c
    redis-src/redis-check-rdb.c
    redis-src/redis-cli.c
    redis-src/redisassert.h
    redis-src/release.c
    redis-src/replication.c
    redis-src/rio.c
    redis-src/rio.h
    redis-src/scripting.c
    redis-src/sds.c
    redis-src/sds.h
    redis-src/sdsalloc.h
    redis-src/sentinel.c
    redis-src/server.c
    redis-src/server.h
    redis-src/setproctitle.c
    redis-src/sha1.c
    redis-src/sha1.h
    redis-src/slowlog.c
    redis-src/slowlog.h
    redis-src/solarisfixes.h
    redis-src/sort.c
    redis-src/sparkline.c
    redis-src/sparkline.h
    redis-src/syncio.c
    redis-src/t_hash.c
    redis-src/t_list.c
    redis-src/t_set.c
    redis-src/t_string.c
    redis-src/t_zset.c
    redis-src/testhelp.h
    redis-src/util.c
    redis-src/util.h
    redis-src/version.h
    redis-src/ziplist.c
    redis-src/ziplist.h
    redis-src/zipmap.c
    redis-src/zipmap.h
    redis-src/zmalloc.c
    redis-src/zmalloc.h)

add_executable(redis ${SOURCE_FILES})
